# grape-vector-db

./: .cursorrules  .gitignore  .mcp.json  BUILTIN_LOAD_BALANCER_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: comprehensive-tests.yml
benches/: comprehensive_benchmarks.rs  test_framework
concurrent_test_data/: db
config/: cluster-builtin-lb.toml
docs/: README.md  architecture.md  builtin-load-balancing.md  comprehensive-testing-plan.md  deployment-single-node.md  immediate-action-plan.md  implementation-plan.md  phase2-distributed-architecture.md  project-status-summary.md  qdrant-compatibility.md  risk-assessment.md  system-design.md  technical-architecture-plan.md  testing-execution-guide.md  testing-strategy.md  week11-12-embedded-mode.md  week5-6-binary-quantization.md  week7-8-advanced-filtering.md  work-plan-detailed.md
docs/en/: deployment-cluster-3node.md  deployment-embedded-mode.md  deployment-single-node.md
docs/zh/: deployment-cluster-3node.md  deployment-embedded-mode.md
examples/: advanced_filtering_demo.rs  advanced_storage_demo.rs  benchmark_fusion_strategies.rs  binary_quantization_demo.rs  builtin_load_balancing_demo.rs  cluster_3node_complete.rs  cluster_3node_simple.rs  embedded_mode_complete.rs  embedded_mode_simple.rs  openai_compatible.rs  single_node_server.rs  single_node_simple.rs
grape_vector_db/: db
performance_test_data/: db
performance_test_data/vector_db/: snap.0000000007D3BCDC
proto/: vector_db.proto
src/: advanced_storage.rs  benchmark.rs  concurrent.rs  config.rs  embedded.rs  embeddings.rs  enterprise.rs  errors.rs  filtering.rs  hybrid.rs  index.rs  lib.rs  metrics.rs  quantization.rs  query.rs  query_engine.rs  resilience.rs  sparse.rs  storage.rs  types.rs
src/distributed/: cluster.rs  cluster_service.rs  consensus.rs  failover.rs  load_balancer.rs  mod.rs  network.rs  network_client.rs  raft.rs  replication.rs  request_router.rs  shard.rs
src/grpc/: client.rs  mod.rs  server.rs  types.rs
src/performance/: cache_manager.rs  concurrent_test.rs  index_optimizer.rs  mod.rs  parallel_search.rs  search_optimizer.rs
storage_test_data/: db
temp_demo_db/vector_db/: db  snap.000000000000C9B5
tests/: chaos_engineering_tests.rs  cluster_mode_tests.rs  complete_enterprise_tests.rs  comprehensive_functional_tests.rs  distributed_test.rs  embedded_cli_integration_tests.rs  embedded_mode_tests.rs  embedded_mode_tests.rs.disabled  enterprise_integration_tests.rs  minimal_functional_tests.rs  qdrant_compatibility_tests.rs  raft_comprehensive_tests.rs  raft_comprehensive_tests.rs.disabled  resharding_comprehensive_tests.rs  standalone_mode_tests.rs  standalone_mode_tests.rs.disabled  test_builtin_load_balancer.rs
tests/test_framework/: chaos.rs  cluster.rs  mod.rs  network.rs  node.rs  utils.rs
tests/test_framework.disabled/: cluster.rs  mod.rs  network.rs  node.rs  utils.rs
