[package]
name = "grape-vector-db"
version = "0.1.0"
edition = "2021"
description = "高性能嵌入式向量数据库，专为AI应用和语义搜索设计"
authors = ["Grape Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/grape-team/grape-vector-db"
documentation = "https://docs.rs/grape-vector-db"
keywords = ["vector", "database", "embedding", "search", "ai"]
categories = ["database", "data-structures", "algorithms"]

[lib]
name = "grape_vector_db"
crate-type = ["lib"]

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 向量计算和索引
nalgebra = "0.32"
ndarray = "0.15"
instant-distance = "0.6"
faiss = { version = "0.12", optional = true }

# 数据库存储
sled = "0.34"
rocksdb = { version = "0.21", optional = true }

# HTTP客户端（用于API调用）
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# 缓存
moka = { version = "0.12", features = ["future"] }
lru = "0.12"

# 全文搜索
tantivy = "0.21"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 指标收集
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", optional = true }

# 文件系统和路径
dirs = "5.0"

# 哈希和编码
sha2 = "0.10"
base64 = "0.21"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 字符串处理
aho-corasick = "1.0"
regex = "1.0"
fancy-regex = "0.11"
unicode-segmentation = "1.0"

# 配置文件
toml = "0.8"

# 并发和原子操作
parking_lot = "0.12"
dashmap = "5.0"
atomic_float = "0.1"

# 数学运算
rand = "0.8"
num-traits = "0.2"
ordered-float = "3.0"

# 压缩
zstd = "0.12"
lz4_flex = "0.11"

# 内存映射
memmap2 = "0.9"

# 异步流
futures = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[features]
default = ["hnsw", "cache", "persistence", "sled-storage", "tantivy-search"]
hnsw = []
cache = []
persistence = []
openai = []
nvidia = []
sled-storage = []
rocksdb-storage = ["rocksdb"]
tantivy-search = []
faiss-index = ["faiss"]
prometheus-metrics = ["metrics-exporter-prometheus"]
