[package]
name = "grape-vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# 错误处理
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 数据库存储（简化版本）
sled = "0.34"

# 缓存
moka = { version = "0.12", features = ["future"] }

# 向量索引
instant-distance = "0.6"

# 性能指标
metrics = "0.21"
atomic_float = "0.1"

# 并发
parking_lot = "0.12"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
toml = "0.8.22"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
futures = "0.3.31"

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
