[package]
name = "grape-vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心异步运行时
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# 加密和哈希
sha2 = "0.10"
hex = "0.4"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 网络和gRPC
tonic = "0.12"
prost = "0.13"

# 数据库存储
sled = "0.34"
# 暂时移除rocksdb，避免bindgen问题
# rocksdb = "0.22"

# 高性能锁
parking_lot = "0.12"

# 向量索引
instant-distance = "0.6"  # HNSW索引
# 暂时移除candle，避免bindgen问题
# candle-core = "0.6"
# candle-nn = "0.6"

# 高性能并行计算
rayon = "1.8"           # 数据并行
crossbeam = "0.8"       # 无锁并发

# 缓存
moka = { version = "0.12", features = ["future", "sync"] }
fastrand = "2.0"        # 快速随机数生成

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 数学计算
nalgebra = "0.33"       # 线性代数
ndarray = "0.16"        # 多维数组

# 性能监控
# 性能监控和指标
metrics = "0.23"
atomic_float = "1.0"

# 暂时移除prometheus导出器，避免复杂依赖
# metrics-exporter-prometheus = "0.15"

# 配置管理
config = "0.14"
toml = "0.8"

# 网络客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 压缩
flate2 = "1.0"

# 内存映射
memmap2 = "0.9"

# 文件系统操作
walkdir = "2.0"

# 字符串处理
regex = "1.0"

# 数据结构
dashmap = "6.0"         # 并发HashMap
smallvec = "1.0"        # 小向量优化

# 异步工具
futures = "0.3"

# 随机数生成
rand = "0.8"

# 序列化 - 二进制格式  
bincode = "1.3"

# 量化支持
bitvec = "1.0"            # 位向量操作
hamming = "0.1"           # 汉明距离计算

# 地理空间和过滤支持
geo = "0.28"              # 地理空间数据结构
rstar = "0.12"            # R*树空间索引
sqlparser = "0.49"        # SQL解析器

# 测试依赖
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
proptest = "1.0"
